--- a/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
@@ -189,7 +189,7 @@
 }
 
 .ast-field-settings-modal .customize-control:last-child {
-  padding-bottom: 15px;
+  padding-bottom: 20px;
 }
 
 .customize-control-ast-settings-group {
